// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileSelect Does not show anything if neither a user credential nor a file are present 1`] = `
<FileSelect
  api={
    Object {
      "postParamEvent": [Function],
    }
  }
  getState={[Function]}
  pid={1}
  saveState={[Function]}
  userCreds={Array []}
/>
`;

exports[`FileSelect Does not show the modal link if there is no user credential present 1`] = `
<FileSelect
  api={
    Object {
      "postParamEvent": [Function],
    }
  }
  getState={[Function]}
  pid={1}
  saveState={[Function]}
  userCreds={Array []}
>
  <div
    className="parameter-margin"
  >
    <div
      className="parameter-margin d-flex gdrive-fileSelect align-items-center"
    >
      <div
        className="file-info content-3"
      >
        <div>
          <div
            className="d-flex"
          >
            <div
              className="t-d-gray content-3 label-margin"
            >
              File
            </div>
          </div>
          <div>
            <span
              className="t-d-gray content-3 mb-3"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</FileSelect>
`;

exports[`FileSelect Loads correctly and allows a user to choose a new file 1`] = `
<FileSelect
  api={
    Object {
      "postParamEvent": [Function],
    }
  }
  getState={[Function]}
  pid={1}
  saveState={[Function]}
  userCreds={
    Array [
      0,
    ]
  }
>
  <div
    className="parameter-margin"
  >
    <div
      className="parameter-margin d-flex gdrive-fileSelect align-items-center"
    >
      <div
        className="file-info content-3"
      >
        <div>
          <div
            className="d-flex"
          >
            <div
              className="t-d-gray content-3 label-margin"
            >
              File
            </div>
          </div>
          <div>
            <span
              className="t-d-gray content-3 mb-3"
            >
              Police Data
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</FileSelect>
`;

exports[`FileSelect Loads correctly and allows a user to choose a new file 2`] = `
<div
  className="modal-dialog"
  role="document"
>
  <div
    className="modal-content"
  >
    <ModalHeader
      tag="h4"
      toggle={[Function]}
      wrapTag="div"
    >
      <div
        className="modal-header"
      >
        <h4
          className="modal-title"
        >
          <div
            className="title-4 t-d-gray"
          >
            Choose File
          </div>
        </h4>
        <button
          aria-label="Close"
          className="close"
          onClick={[Function]}
          type="button"
        >
          <span
            aria-hidden="true"
          >
            ×
          </span>
        </button>
      </div>
    </ModalHeader>
    <ModalBody
      className="list-body"
      tag="div"
    >
      <div
        className="list-body modal-body"
      >
        <div
          className=""
        >
          <div
            className="line-item-data"
            onClick={[Function]}
          >
            <span
              className="content-3"
            >
              Police Data
            </span>
          </div>
          <div
            className="line-item-data"
            onClick={[Function]}
          >
            <span
              className="content-3"
            >
              Government Contracts
            </span>
          </div>
          <div
            className="line-item-data"
            onClick={[Function]}
          >
            <span
              className="content-3"
            >
              Labor and materials
            </span>
          </div>
          <div
            className="line-item-data"
            onClick={[Function]}
          >
            <span
              className="content-3"
            >
              Budget
            </span>
          </div>
          <div
            className="line-item-data"
            onClick={[Function]}
          >
            <span
              className="content-3"
            >
              Science Data
            </span>
          </div>
        </div>
      </div>
    </ModalBody>
    <div
      className="dialog-footer modal-footer"
    />
  </div>
</div>
`;

exports[`FileSelect Shows the file count and larger button if there is no file and a user credential is present 1`] = `
<FileSelect
  api={
    Object {
      "postParamEvent": [Function],
    }
  }
  getState={[Function]}
  pid={1}
  saveState={[Function]}
  userCreds={
    Array [
      0,
    ]
  }
/>
`;
